--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
   "dependencies": {
     "babel-eslint": "^6.1.2",
     "css-loader": "^0.25.0",
+    "es6-promise": "^4.0.5",
     "expose-loader": "^0.7.1",
+    "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "loglevel": "^1.4.1",
     "moment": "^2.15.2",
