--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "this is a yinchao-h5",
   "scripts": {
     "clean": "rimraf dist",
-    "build:webpack": "NODE_ENV=dev webpack --bail",
+    "build:webpack": "NODE_ENV=production webpack --bail",
     "build": "npm run clean && npm run build:webpack",
     "publish": "npm run build && npm run upload",
     "prebuild": "npm install",
